Fix X OAuth endpoints and env vars

--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,21 @@ CORS_ORIGIN=*
 
 # Authentication
 JWT_SECRET=your-jwt-secret-here
+COOKIE_SECRET=your-cookie-signing-secret
 
-# X (Twitter) API Configuration
-# Get these from https://developer.twitter.com/
-X_API_KEY=your-x-api-key-here
-X_API_SECRET=your-x-api-secret-here
-X_ACCESS_TOKEN=your-x-access-token-here
-X_ACCESS_TOKEN_SECRET=your-x-access-token-secret-here
+# X (Twitter) API Configuration (OAuth 2.0)
+# Get these from https://developer.twitter.com/ (X Developer Portal)
+X_CLIENT_ID=your-x-oauth2-client-id
+X_CLIENT_SECRET=your-x-oauth2-client-secret
+X_REDIRECT_URI=https://your-domain.com/auth/x/callback
+# Common default scopes shown; adjust as needed in the Developer Portal
+X_SCOPES=tweet.read tweet.write users.read offline.access
+
+# Legacy (OAuth 1.0a) keys – not used for OAuth2 code flow
+# X_API_KEY=your-x-api-key-here
+# X_API_SECRET=your-x-api-secret-here
+# X_ACCESS_TOKEN=your-x-access-token-here
+# X_ACCESS_TOKEN_SECRET=your-x-access-token-secret-here
 
 # Database (if using PostgreSQL instead of in-memory storage)
 # DATABASE_URL=postgresql://username:password@localhost:5432/mirancourt_social
